--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -266,7 +266,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-133427510-2"
   google_tag_manager = ""
 
 ############################
