--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -3,11 +3,47 @@
 #   Refer to https://sourcethemes.com/academic/docs/language/
 
 # Configure the English version of the site.
-# [en]
-#   languageCode = "en-us"
 [ja]
   languageCode = "ja"
-  # contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  contentDir = "content/ja"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  title = "Daisuke Oku's Website"
+  weight = 10
+
+[en]
+  languageCode = "en-us"
+  contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  title = "Daisuke Oku's Website"
+  weight = 20
+
+  # [[en.menu.main]]
+  #   name = "Biography"
+  #   url = "#about"
+  #   weight = 10
+  # 
+  # [[en.menu.main]]
+  #   name = "Experience"
+  #   url = "#experience"
+  #   weight = 20
+  # 
+  # [[en.menu.main]]
+  #   name = "Publications"
+  #   url = "#publications"
+  #   weight = 30
+  # 
+  # [[en.menu.main]]
+  #   name = "Projects"
+  #   url = "#projects"
+  #   weight = 40
+  # 
+  # [[en.menu.main]]
+  #   name = "Posts"
+  #   url = "#posts"
+  #   weight = 50
+  # 
+  # [[en.menu.main]]
+  #   name = "Contact"
+  #   url = "#contact"
+  #   weight = 90
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
