--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,7 +5,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Daisuke Oku's Website"
+title = "About Me"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -13,7 +13,7 @@ baseURL = "https://w40141.github.io/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Daisuke Oku"
+copyright = "&copy; 2021 Daisuke Oku"
 
 ############################
 ## Advanced options below ##
