--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,14 +24,14 @@
   weight = 40
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 50
-
-[[main]]
   name = "Contact"
   url = "#contact"
   weight = 90
+
+# [[main]]
+#   name = "Posts"
+#   url = "#posts"
+#   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
