--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,16 +11,21 @@
 [[main]]
   name = "Biography"
   url = "#about"
-  weight = 50
+  weight = 40
 
 [[main]]
   name = "Experience"
   url = "#experience"
-  weight = 60
+  weight = 50
 
 [[main]]
   name = "Publications"
   url = "#publications"
+  weight = 60
+
+[[main]]
+  name = "Award"
+  url = "#awards"
   weight = 70
 
 [[main]]
@@ -32,11 +37,6 @@
   name = "Contact"
   url = "#contact"
   weight = 90
-
-# [[main]]
-#   name = "Posts"
-#   url = "#posts"
-#   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
